--- a/leaflet.html
+++ b/leaflet.html
@@ -22,6 +22,11 @@ L.marker([51.5, -0.09]).addTo(mymap)
     .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
     .openPopup(); 
     // THIS IS NEW
+    var promise = $.getJSON("businesses.json");
+    promise.then(function(data) {
+        //do a bunch of stuff here
+        console.log(data) // take a look at the data in the console
+    });     
     var promise = $.getJSON("pubs.json");
     promise.then(function(data) {
         //do a bunch of stuff here
