--- a/leaflet.html
+++ b/leaflet.html
@@ -44,5 +44,5 @@ L.marker([51.5, -0.09]).addTo(mymap)
     markerColor: 'yellow'
   });
       
-  L.marker([51.55,0.09], {icon: redMarker}).addTo(map);
+  L.marker([51.55,0.09], {icon: redMarker}).addTo(mymap);
 </script>
