--- a/leaflet.html
+++ b/leaflet.html
@@ -40,7 +40,7 @@ L.marker([51.5, -0.09]).addTo(mymap)
         });
   // Creates a red marker with the coffee icon
   var redMarker = L.AwesomeMarkers.icon({
-    icon: 'beer',
+    icon: 'cofee',
     markerColor: 'yellow'
   });
       
