--- a/leaflet.html
+++ b/leaflet.html
@@ -42,7 +42,7 @@ L.marker([51.5, -0.09]).addTo(mymap)
         });
   // Creates a red marker with the coffee icon
   var redMarker = L.AwesomeMarkers.icon({
-    icon: 'cofee',
+    icon: 'coffee',
     markerColor: 'yellow'
   });
       
